atualização nos testes de rastreamento de investimentos